moved show page api functions to the main api file for cleaner code. Trailer modal fixed a bit but background needs to be blurred when opened and the video size should be responsive

--- a/src/components/Styles/showPage.css
+++ b/src/components/Styles/showPage.css
@@ -49,7 +49,21 @@ padding: 10px 0;
 /* position: absolute; */
 top: 50%;
 left: 50%;
-height: 300px;
-width: 400px;
+height: 100%;
+width: 100%;
 border: none;
+}
+
+.trailerContainer {
+    height: 50%;
+    width: 60%;
+    position: absolute;
+    top:50%;
+    left: 10%;
+}
+
+.hiddenTrailer {
+    display: none;
+    visibility: hidden;
+    height: 0;
 }
